@@ -10,6 +10,7 @@ Version 2.3.0
    - Changed version to 2.3.0 (from version 2.2.5)
    - Port (from gnubiff 2.2.5 CVS) of about dialog closing bugfixes
    - Added Sebastian Breier to contributors
+   - Port (from gnubiff 2.2.5 CVS) of bugfix for determining initial image size
 	
 Version 2.2.5
  * Robert Sowada
@@ -18,6 +19,8 @@ Version 2.2.5
         gtk 2.10?; this bug was reported by Sebastian Breier as #1621270)
    - Bugfix: Handling of the "delete-event" in the about dialog
    - Added Sebastian Breier to contributors
+   - Bugfix: Determining initial image size (thanks to Felipe Csaszar for
+        reporting this bug)
 
 Version 2.2.4		2006-12-10 19:47
  * Robert Sowada
